--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,12 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://use.typekit.net/pdj0dfw.css" />
+
         <link href="./style.css" rel="stylesheet" />
         <style>
             body {
-                font-family: 'Syne', sans-serif;
+                font-family: 'futura-pt', sans-serif;
             }
         </style>
     </head>
