--- a/squarespace.html
+++ b/squarespace.html
@@ -3,6 +3,7 @@
 <!-- Archivo Black font -->
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet" />
+<link rel="stylesheet" href="https://use.typekit.net/pdj0dfw.css" />
 <script data-cfasync="false" data-tockify-script="embed" src="https://public.tockify.com/browser/embed.js"></script>
 
 <!--
@@ -74,7 +75,7 @@ So double check before editing or removing it
                         <img class="icon" src="https://raw.githubusercontent.com/lbugasu/cifcapps/master/images/link_icon.png"/>
                       </a>`
                             } else {
-                                return `<span></span>`
+                                return ``
                             }
                         }
 
@@ -88,7 +89,7 @@ So double check before editing or removing it
                       <img class="icon"/ src= "https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Facebook_circle_pictogram.svg/1200px-Facebook_circle_pictogram.svg.png">
                     </a>`
                             } else {
-                                return `<span></span>`
+                                return ``
                             }
                         }
 
@@ -122,18 +123,24 @@ So double check before editing or removing it
                           club['cover']
                       }); height: 175px">
                     </div>
-                    <p class="clubDescription">${club['Description']}</p>
-                    <h4>Meeting Time & Location:</h4>
-                    <p class="meetingPlace"><b>Time:</b> ${club['Weekly Meeting Timee'] ? club['Weekly Meeting Time'] : 'N/A'}</p>
-                    <p class="meetingPlace"><b>Location:</b> ${club['Meeting Place'] ? club['Meeting Place'] : 'N/A'}</p>
+                    <span class="clubMetaData">
+                        <p class="clubDescription">${club['Description']}</p>
+                        <h4>Weekly Meeting Time & Location:</h4>
+                        <p class="meetingPlace"><b class="meetingTitle">Time:</b> ${
+                            club['Weekly Meeting Timee'] ? club['Weekly Meeting Time'] : 'N/A'
+                        }</p>
+                        <p class="meetingPlace"><b class="meetingTitle">Location:</b> ${
+                            club['Meeting Place'] ? club['Meeting Place'] : 'N/A'
+                        }</p>
 
-                    <h4>Contact:</h4>
-                    <p class="contactPerson">${
-                        club['Main Contact Person'] ? club['Main Contact Person'] : 'N/A'
-                    }<br/><a href="mailto:${club['Email']}">${club['Email']} ✉ </a></p>
-                    <div class="links">
-                    ${checkFB()}
-                    ${checkWebsite()}
+                        <h4>Contact:</h4>
+                        <p class="contactPerson">${
+                            club['Main Contact Person'] ? club['Main Contact Person'] : 'N/A'
+                        }<br/><a class="email" href="mailto:${club['Email']}">${club['Email']} ✉ </a></p>
+                        <div class="links">
+                        ${checkFB()}
+                        ${checkWebsite()}
+                    </span>
                 </div>`
                         clubsDiv.appendChild(ele)
                     })
