style: link stylesheet to github

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://use.typekit.net/pdj0dfw.css" />
+        <link rel="stylesheet" href="https://laudebugs.github.io/cifc/style.css" />
 
-        <link href="./style.css" rel="stylesheet" />
+        <!-- <link href="./style.css" rel="stylesheet" /> -->
         <style>
             body {
                 font-family: 'futura-pt', sans-serif;
