Update release to output generated at 7961172

--- a/squarespace.html
+++ b/squarespace.html
@@ -128,7 +128,7 @@ So double check before editing or removing it
                         <p class="clubDescription">${club['Description']}</p>
                         <h4>Weekly Meeting Time & Location:</h4>
                         <p class="meetingPlace"><b class="meetingTitle">Time:</b> ${
-                            club['Weekly Meeting Timee'] ? club['Weekly Meeting Time'] : 'N/A'
+                            club['Weekly Meeting Time'] ? club['Weekly Meeting Time'] : 'N/A'
                         }</p>
                         <p class="meetingPlace"><b class="meetingTitle">Location:</b> ${
                             club['Meeting Place'] ? club['Meeting Place'] : 'N/A'
