--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://use.typekit.net/pdj0dfw.css" />
         <link rel="stylesheet" href="https://laudebugs.github.io/cifc/style.css" />
-
-        <!-- <link href="./style.css" rel="stylesheet" /> -->
+        <script defer src="https://laudebugs.github.io/cifc/main.js"></script>
         <style>
             body {
                 font-family: 'futura-pt', sans-serif;
@@ -34,7 +33,7 @@
                 <div></div>
             </figure>
         </div>
-        <script src="./main.js" rel="text/js"></script>
+        <!-- <script src="./main.js" rel="text/js"></script> -->
     </body>
 </html>
 <!--   -->
