fix: local dev settings

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://use.typekit.net/pdj0dfw.css" />
         <link rel="stylesheet" href="https://laudebugs.github.io/cifc/style.css" />
+        <!-- Comment out the line below for local development -->
         <script defer src="https://laudebugs.github.io/cifc/main.js"></script>
         <style>
             body {
@@ -33,6 +34,7 @@
                 <div></div>
             </figure>
         </div>
+        <!-- Uncomment this line for local development -->
         <!-- <script src="./main.js" rel="text/js"></script> -->
     </body>
 </html>
